Fix Scrollbar for Windows

--- a/frontend/src/components/IngredientsSelect/style.scss
+++ b/frontend/src/components/IngredientsSelect/style.scss
@@ -50,7 +50,7 @@
 
   /* scrollbar itself */
   .grid::-webkit-scrollbar-thumb {
-    background-color: red;
+    background-color: #babac0;
     border-radius: 16px;
     border: 4px solid #fff;
   }
